# f1-strategy-lab

./: docker-compose.yml
backend/: .gitignore  explore.py  main.py  pyproject.toml
backend/ingestion/: ingest.py  schema.sql
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py  fa572eea4bfc_increase_compound_varchar_size_in_laps.py
backend/ml/pit_time/: features.py  model.py  test_train_bakeoff.py  train.py
backend/ml/tire_degradation/: features.py  model.py  train.py
backend/simulation/: engine.py  models.py  simulate.py
backend/tests/: test_engine.py
docs/: ML_FINDINGS.md  ML_FINDINGS_FOR_PITS.md
notebooks/: 01_data_exploration.ipynb  02_tire_degradation_model.ipynb  03_model_refinement.ipynb  04_pit_time_model.ipynb  05_pit_time_model_refinement.ipynb
